@@ -20,6 +20,9 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
   * Improve the description of --show-format in dpkg-deb
     man page and add a pointer to the complete description
     of the option in dpkg-query.
+  * Don't spew out garbage from dpkg-deb, if the second argument
+    to -I is a absolute filename. Based on a patch by Ian Eure.
+    Closes: #35573
 
   [ Nicolas François ]
   * fix typos in the Russian man pages. Thanks to Stepan Golosunov.
