@@ -1,5 +1,10 @@
 2006-05-12  Frank Lichtenheld  <djpig@debian.org>
 
+	* dpkg-deb/info.c (info_spew): Prepend the name of the
+	directory we're in to the control component name. This
+	way we don't spew out garbage if we get an absolute
+	path as component name.
+
 	* scripts/dpkg-scanpackages.pl: Print usage
 	information on stderr instead of stdout in
 	case of error. Only print it on stdout if
